--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="container-fluid p-0">
             <div class="row g-0">
                 <div class="col-lg-4 col-sm-6 d-flex justify-content-center align-items-center my-3">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Project Name">
+                    <a class="portfolio-box" href="assets/img/portfolio/thumbnails/1.jpg" title="32 gb memory card">
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
@@ -132,7 +132,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6 d-flex justify-content-center align-items-center my-3">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg" title="Project Name">
+                    <a class="portfolio-box" href="assets/img/portfolio/thumbnails/2.jpg" title="computer wired Mouse">
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
@@ -141,7 +141,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6 d-flex justify-content-center align-items-center my-3">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg" title="Project Name">
+                    <a class="portfolio-box" href="assets/img/portfolio/thumbnails/3.jpg" title="Hdmi wire cord">
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
@@ -150,7 +150,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6 d-flex justify-content-center align-items-center my-3">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg" title="Project Name">
+                    <a class="portfolio-box" href="assets/img/portfolio/thumbnails/4.jpg" title="Computer keyboard">
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
@@ -159,7 +159,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6 d-flex justify-content-center align-items-center my-3">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg" title="Project Name">
+                    <a class="portfolio-box" href="assets/img/portfolio/thumbnails/5.jpg" title="Computer Parts">
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="..." />
                         <div class="portfolio-box-caption">
                             <div class="project-category text-white-50">Category</div>
@@ -168,7 +168,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6 d-flex justify-content-center align-items-center my-3">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg" title="Project Name">
+                    <a class="portfolio-box" href="assets/img/portfolio/thumbnails/6.jpg" title="Project Name">
                         <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="..." />
                         <div class="portfolio-box-caption p-3">
                             <div class="project-category text-white-50">Category</div>
